libqt6c/src/libqxmlstream.hpp

typedef struct QXmlStreamAttribute QXmlStreamAttribute;
typedef struct QXmlStreamAttributes QXmlStreamAttributes;
typedef struct QXmlStreamEntityDeclaration QXmlStreamEntityDeclaration;
typedef struct QXmlStreamEntityResolver QXmlStreamEntityResolver;
typedef struct QXmlStreamNamespaceDeclaration QXmlStreamNamespaceDeclaration;
typedef struct QXmlStreamNotationDeclaration QXmlStreamNotationDeclaration;
typedef struct QXmlStreamReader QXmlStreamReader;
QXmlStreamAttribute* QXmlStreamAttribute_new();
QXmlStreamAttribute* QXmlStreamAttribute_new2(const libqt_string qualifiedName, const libqt_string value);
QXmlStreamAttribute* QXmlStreamAttribute_new3(const libqt_string namespaceUri, const libqt_string name, const libqt_string value);
QXmlStreamAttribute* QXmlStreamAttribute_new4(const QXmlStreamAttribute* param1);
bool QXmlStreamAttribute_IsDefault(const QXmlStreamAttribute* self);
bool QXmlStreamAttribute_OperatorEqual(const QXmlStreamAttribute* self, const QXmlStreamAttribute* other);
bool QXmlStreamAttribute_OperatorNotEqual(const QXmlStreamAttribute* self, const QXmlStreamAttribute* other);
void QXmlStreamAttribute_OperatorAssign(QXmlStreamAttribute* self, const QXmlStreamAttribute* param1);
void QXmlStreamAttribute_Delete(QXmlStreamAttribute* self);
QXmlStreamAttributes* QXmlStreamAttributes_new();
void QXmlStreamAttributes_Append(QXmlStreamAttributes* self, const libqt_string namespaceUri, const libqt_string name, const libqt_string value);
void QXmlStreamAttributes_Append2(QXmlStreamAttributes* self, const libqt_string qualifiedName, const libqt_string value);
bool QXmlStreamAttributes_HasAttribute(const QXmlStreamAttributes* self, const libqt_string qualifiedName);
bool QXmlStreamAttributes_HasAttribute3(const QXmlStreamAttributes* self, const libqt_string namespaceUri, const libqt_string name);
void QXmlStreamAttributes_Delete(QXmlStreamAttributes* self);
QXmlStreamNamespaceDeclaration* QXmlStreamNamespaceDeclaration_new();
QXmlStreamNamespaceDeclaration* QXmlStreamNamespaceDeclaration_new2(const libqt_string prefix, const libqt_string namespaceUri);
bool QXmlStreamNamespaceDeclaration_OperatorEqual(const QXmlStreamNamespaceDeclaration* self, const QXmlStreamNamespaceDeclaration* other);
bool QXmlStreamNamespaceDeclaration_OperatorNotEqual(const QXmlStreamNamespaceDeclaration* self, const QXmlStreamNamespaceDeclaration* other);
void QXmlStreamNamespaceDeclaration_Delete(QXmlStreamNamespaceDeclaration* self);
QXmlStreamNotationDeclaration* QXmlStreamNotationDeclaration_new();
bool QXmlStreamNotationDeclaration_OperatorEqual(const QXmlStreamNotationDeclaration* self, const QXmlStreamNotationDeclaration* other);
bool QXmlStreamNotationDeclaration_OperatorNotEqual(const QXmlStreamNotationDeclaration* self, const QXmlStreamNotationDeclaration* other);
void QXmlStreamNotationDeclaration_Delete(QXmlStreamNotationDeclaration* self);
QXmlStreamEntityDeclaration* QXmlStreamEntityDeclaration_new();
bool QXmlStreamEntityDeclaration_OperatorEqual(const QXmlStreamEntityDeclaration* self, const QXmlStreamEntityDeclaration* other);
bool QXmlStreamEntityDeclaration_OperatorNotEqual(const QXmlStreamEntityDeclaration* self, const QXmlStreamEntityDeclaration* other);
void QXmlStreamEntityDeclaration_Delete(QXmlStreamEntityDeclaration* self);
libqt_string QXmlStreamEntityResolver_ResolveEntity(QXmlStreamEntityResolver* self, const libqt_string publicId, const libqt_string systemId);
libqt_string QXmlStreamEntityResolver_ResolveUndeclaredEntity(QXmlStreamEntityResolver* self, const libqt_string name);
void QXmlStreamEntityResolver_OperatorAssign(QXmlStreamEntityResolver* self, const QXmlStreamEntityResolver* param1);
void QXmlStreamEntityResolver_Delete(QXmlStreamEntityResolver* self);