QtBeef/src/Qt/qxmlstream.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QXmlStreamAttribute
// --------------------------------------------------------------
[CRepr]
struct QXmlStreamAttribute_Ptr: void
{
}
extension CQt
{
	[LinkName("QXmlStreamAttribute_new")]
	public static extern QXmlStreamAttribute_Ptr* QXmlStreamAttribute_new();
	[LinkName("QXmlStreamAttribute_new2")]
	public static extern QXmlStreamAttribute_Ptr* QXmlStreamAttribute_new2(libqt_string qualifiedName, libqt_string value);
	[LinkName("QXmlStreamAttribute_new3")]
	public static extern QXmlStreamAttribute_Ptr* QXmlStreamAttribute_new3(libqt_string namespaceUri, libqt_string name, libqt_string value);
	[LinkName("QXmlStreamAttribute_new4")]
	public static extern QXmlStreamAttribute_Ptr* QXmlStreamAttribute_new4(QXmlStreamAttribute_Ptr* param1);
	[LinkName("QXmlStreamAttribute_Delete")]
	public static extern void QXmlStreamAttribute_Delete(QXmlStreamAttribute_Ptr* self);
	[LinkName("QXmlStreamAttribute_IsDefault")]
	public static extern bool QXmlStreamAttribute_IsDefault(QXmlStreamAttribute_Ptr* self);
	[LinkName("QXmlStreamAttribute_OperatorEqual")]
	public static extern bool QXmlStreamAttribute_OperatorEqual(QXmlStreamAttribute_Ptr* self, QXmlStreamAttribute_Ptr* other);
	[LinkName("QXmlStreamAttribute_OperatorNotEqual")]
	public static extern bool QXmlStreamAttribute_OperatorNotEqual(QXmlStreamAttribute_Ptr* self, QXmlStreamAttribute_Ptr* other);
	[LinkName("QXmlStreamAttribute_OperatorAssign")]
	public static extern void QXmlStreamAttribute_OperatorAssign(QXmlStreamAttribute_Ptr* self, QXmlStreamAttribute_Ptr* param1);
}
class QXmlStreamAttribute : IQXmlStreamAttribute
{
	private QXmlStreamAttribute_Ptr* ptr;
	public void* ObjectPtr => ptr;
	public this()
	{
		this.ptr = CQt.QXmlStreamAttribute_new();
	}
	public this(String qualifiedName, String value)
	{
		this.ptr = CQt.QXmlStreamAttribute_new2(libqt_string(qualifiedName), libqt_string(value));
	}
	public this(String namespaceUri, String name, String value)
	{
		this.ptr = CQt.QXmlStreamAttribute_new3(libqt_string(namespaceUri), libqt_string(name), libqt_string(value));
	}
	public this(IQXmlStreamAttribute param1)
	{
		this.ptr = CQt.QXmlStreamAttribute_new4((.)param1?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QXmlStreamAttribute_Delete(this.ptr);
	}
	public bool IsDefault()
	{
		return CQt.QXmlStreamAttribute_IsDefault((.)this.ptr);
	}
}
interface IQXmlStreamAttribute : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QXmlStreamAttributes
// --------------------------------------------------------------
[CRepr]
struct QXmlStreamAttributes_Ptr: void
{
}
extension CQt
{
	[LinkName("QXmlStreamAttributes_new")]
	public static extern QXmlStreamAttributes_Ptr* QXmlStreamAttributes_new();
	[LinkName("QXmlStreamAttributes_Delete")]
	public static extern void QXmlStreamAttributes_Delete(QXmlStreamAttributes_Ptr* self);
	[LinkName("QXmlStreamAttributes_Append")]
	public static extern void QXmlStreamAttributes_Append(QXmlStreamAttributes_Ptr* self, libqt_string namespaceUri, libqt_string name, libqt_string value);
	[LinkName("QXmlStreamAttributes_Append2")]
	public static extern void QXmlStreamAttributes_Append2(QXmlStreamAttributes_Ptr* self, libqt_string qualifiedName, libqt_string value);
	[LinkName("QXmlStreamAttributes_HasAttribute")]
	public static extern bool QXmlStreamAttributes_HasAttribute(QXmlStreamAttributes_Ptr* self, libqt_string qualifiedName);
	[LinkName("QXmlStreamAttributes_HasAttribute3")]
	public static extern bool QXmlStreamAttributes_HasAttribute3(QXmlStreamAttributes_Ptr* self, libqt_string namespaceUri, libqt_string name);
}
class QXmlStreamAttributes : IQXmlStreamAttributes
{
	private QXmlStreamAttributes_Ptr* ptr;
	public void* ObjectPtr => ptr;
	public this()
	{
		this.ptr = CQt.QXmlStreamAttributes_new();
	}
	public ~this()
	{
		CQt.QXmlStreamAttributes_Delete(this.ptr);
	}
	public void Append(String namespaceUri, String name, String value)
	{
		CQt.QXmlStreamAttributes_Append((.)this.ptr, libqt_string(namespaceUri), libqt_string(name), libqt_string(value));
	}
	public void Append2(String qualifiedName, String value)
	{
		CQt.QXmlStreamAttributes_Append2((.)this.ptr, libqt_string(qualifiedName), libqt_string(value));
	}
	public bool HasAttribute(String qualifiedName)
	{
		return CQt.QXmlStreamAttributes_HasAttribute((.)this.ptr, libqt_string(qualifiedName));
	}
	public bool HasAttribute3(String namespaceUri, String name)
	{
		return CQt.QXmlStreamAttributes_HasAttribute3((.)this.ptr, libqt_string(namespaceUri), libqt_string(name));
	}
}
interface IQXmlStreamAttributes : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QXmlStreamNamespaceDeclaration
// --------------------------------------------------------------
[CRepr]
struct QXmlStreamNamespaceDeclaration_Ptr: void
{
}
extension CQt
{
	[LinkName("QXmlStreamNamespaceDeclaration_new")]
	public static extern QXmlStreamNamespaceDeclaration_Ptr* QXmlStreamNamespaceDeclaration_new();
	[LinkName("QXmlStreamNamespaceDeclaration_new2")]
	public static extern QXmlStreamNamespaceDeclaration_Ptr* QXmlStreamNamespaceDeclaration_new2(libqt_string prefix, libqt_string namespaceUri);
	[LinkName("QXmlStreamNamespaceDeclaration_Delete")]
	public static extern void QXmlStreamNamespaceDeclaration_Delete(QXmlStreamNamespaceDeclaration_Ptr* self);
	[LinkName("QXmlStreamNamespaceDeclaration_OperatorEqual")]
	public static extern bool QXmlStreamNamespaceDeclaration_OperatorEqual(QXmlStreamNamespaceDeclaration_Ptr* self, QXmlStreamNamespaceDeclaration_Ptr* other);
	[LinkName("QXmlStreamNamespaceDeclaration_OperatorNotEqual")]
	public static extern bool QXmlStreamNamespaceDeclaration_OperatorNotEqual(QXmlStreamNamespaceDeclaration_Ptr* self, QXmlStreamNamespaceDeclaration_Ptr* other);
}
class QXmlStreamNamespaceDeclaration : IQXmlStreamNamespaceDeclaration
{
	private QXmlStreamNamespaceDeclaration_Ptr* ptr;
	public void* ObjectPtr => ptr;
	public this()
	{
		this.ptr = CQt.QXmlStreamNamespaceDeclaration_new();
	}
	public this(String prefix, String namespaceUri)
	{
		this.ptr = CQt.QXmlStreamNamespaceDeclaration_new2(libqt_string(prefix), libqt_string(namespaceUri));
	}
	public ~this()
	{
		CQt.QXmlStreamNamespaceDeclaration_Delete(this.ptr);
	}
}
interface IQXmlStreamNamespaceDeclaration : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QXmlStreamNotationDeclaration
// --------------------------------------------------------------
[CRepr]
struct QXmlStreamNotationDeclaration_Ptr: void
{
}
extension CQt
{
	[LinkName("QXmlStreamNotationDeclaration_new")]
	public static extern QXmlStreamNotationDeclaration_Ptr* QXmlStreamNotationDeclaration_new();
	[LinkName("QXmlStreamNotationDeclaration_Delete")]
	public static extern void QXmlStreamNotationDeclaration_Delete(QXmlStreamNotationDeclaration_Ptr* self);
	[LinkName("QXmlStreamNotationDeclaration_OperatorEqual")]
	public static extern bool QXmlStreamNotationDeclaration_OperatorEqual(QXmlStreamNotationDeclaration_Ptr* self, QXmlStreamNotationDeclaration_Ptr* other);
	[LinkName("QXmlStreamNotationDeclaration_OperatorNotEqual")]
	public static extern bool QXmlStreamNotationDeclaration_OperatorNotEqual(QXmlStreamNotationDeclaration_Ptr* self, QXmlStreamNotationDeclaration_Ptr* other);
}
class QXmlStreamNotationDeclaration : IQXmlStreamNotationDeclaration
{
	private QXmlStreamNotationDeclaration_Ptr* ptr;
	public void* ObjectPtr => ptr;
	public this()
	{
		this.ptr = CQt.QXmlStreamNotationDeclaration_new();
	}
	public ~this()
	{
		CQt.QXmlStreamNotationDeclaration_Delete(this.ptr);
	}
}
interface IQXmlStreamNotationDeclaration : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QXmlStreamEntityDeclaration
// --------------------------------------------------------------
[CRepr]
struct QXmlStreamEntityDeclaration_Ptr: void
{
}
extension CQt
{
	[LinkName("QXmlStreamEntityDeclaration_new")]
	public static extern QXmlStreamEntityDeclaration_Ptr* QXmlStreamEntityDeclaration_new();
	[LinkName("QXmlStreamEntityDeclaration_Delete")]
	public static extern void QXmlStreamEntityDeclaration_Delete(QXmlStreamEntityDeclaration_Ptr* self);
	[LinkName("QXmlStreamEntityDeclaration_OperatorEqual")]
	public static extern bool QXmlStreamEntityDeclaration_OperatorEqual(QXmlStreamEntityDeclaration_Ptr* self, QXmlStreamEntityDeclaration_Ptr* other);
	[LinkName("QXmlStreamEntityDeclaration_OperatorNotEqual")]
	public static extern bool QXmlStreamEntityDeclaration_OperatorNotEqual(QXmlStreamEntityDeclaration_Ptr* self, QXmlStreamEntityDeclaration_Ptr* other);
}
class QXmlStreamEntityDeclaration : IQXmlStreamEntityDeclaration
{
	private QXmlStreamEntityDeclaration_Ptr* ptr;
	public void* ObjectPtr => ptr;
	public this()
	{
		this.ptr = CQt.QXmlStreamEntityDeclaration_new();
	}
	public ~this()
	{
		CQt.QXmlStreamEntityDeclaration_Delete(this.ptr);
	}
}
interface IQXmlStreamEntityDeclaration : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QXmlStreamEntityResolver
// --------------------------------------------------------------
[CRepr]
struct QXmlStreamEntityResolver_Ptr: void
{
}
extension CQt
{
	[LinkName("QXmlStreamEntityResolver_Delete")]
	public static extern void QXmlStreamEntityResolver_Delete(QXmlStreamEntityResolver_Ptr* self);
	[LinkName("QXmlStreamEntityResolver_ResolveEntity")]
	public static extern libqt_string QXmlStreamEntityResolver_ResolveEntity(QXmlStreamEntityResolver_Ptr* self, libqt_string publicId, libqt_string systemId);
	[LinkName("QXmlStreamEntityResolver_ResolveUndeclaredEntity")]
	public static extern libqt_string QXmlStreamEntityResolver_ResolveUndeclaredEntity(QXmlStreamEntityResolver_Ptr* self, libqt_string name);
	[LinkName("QXmlStreamEntityResolver_OperatorAssign")]
	public static extern void QXmlStreamEntityResolver_OperatorAssign(QXmlStreamEntityResolver_Ptr* self, QXmlStreamEntityResolver_Ptr* param1);
}
class QXmlStreamEntityResolver : IQXmlStreamEntityResolver
{
	private QXmlStreamEntityResolver_Ptr* ptr;
	public void* ObjectPtr => ptr;
	public ~this()
	{
		CQt.QXmlStreamEntityResolver_Delete(this.ptr);
	}
	public libqt_string ResolveEntity(String publicId, String systemId)
	{
		return CQt.QXmlStreamEntityResolver_ResolveEntity((.)this.ptr, libqt_string(publicId), libqt_string(systemId));
	}
	public libqt_string ResolveUndeclaredEntity(String name)
	{
		return CQt.QXmlStreamEntityResolver_ResolveUndeclaredEntity((.)this.ptr, libqt_string(name));
	}
}
interface IQXmlStreamEntityResolver : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QXmlStreamReader
// --------------------------------------------------------------
[CRepr]
struct QXmlStreamReader_Ptr: void
{
}
